search feature: make sure page scrollbar disappears when searching but a scrollbar for search items shows if needed

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1067,6 +1067,8 @@ pre {
   margin-top: 1.5rem;
   color: #fff;
   font-size: 1.5rem;
+  max-height: calc(100vh - 6.5rem);
+  overflow-y: auto;
 }
 #search-results-container a {
   color: #fff;
